--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,13 @@ flutter_launcher_icons:
 
 flutter_native_splash:
   color: "#262626"
+  image: "assets/icon/logo_for_splash_screen.png"
+  android: true
+  ios: true
   android_12:
-    color: "#262626"
+    icon_background_color: "#262626"
+    image: "assets/icon/logo_for_splash_screen.png"
+
 
 flutter:
   uses-material-design: true
