--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
+  auto_route: ^10.2.0
 
 dev_dependencies:
   flutter_test:
@@ -20,6 +21,8 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_launcher_icons: "^0.14.4"
   flutter_native_splash: ^2.4.6
+  auto_route_generator: ^10.2.5
+  build_runner: ^2.10.0
 
 flutter_launcher_icons:
   android: "launcher_icon"
